# pyifc

./: .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  init_script.py  pyproject.toml  pytest.ini  readthedocs.yaml  requirements.txt  setup.cfg
.github/workflows/: publish-pypi.yml
docs/: api.rst  compress.rst  conf.py  index.rst  quickstart.md
pyifc/: __init__.py  _utils.py  _version.py
pyifc/compare/: __init__.py
pyifc/compress/: __init__.py  _compress.py  _exceptions.py  _pack.py  _validators.py
pyifc/count/: __init__.py
pyifc/modify/: __init__.py
src/pyifc/compress/: __init__.py
tests/: conftest.py  test_compress.py
typings/: README.md
