[metadata]
name = pyifc
version = attr: pyifc.__version__
author = tbrus
author_email = tomek.brus1@gmail.com
description = Utilities for .ifc files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tbrus/pyifc
project_urls =
    Bug Tracker = https://github.com/tbrus/pyifc/issues
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    # add dependencies
python_requires = >=3.9

[options.packages.find]
where = src