[metadata]
name = pyifc
version = attr: pyifc.__version__
author = tbrus
author_email = tomek.brus1@gmail.com
description = Utilities for .ifc files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tbrus/pyifc
project_urls =
    Bug Tracker = https://github.com/tbrus/pyifc/issues
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    toposort>=1.7
python_requires = >=3.7

[options.extras_require]
test = 
    pytest>=6.0
    coverage>=6.0
